
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcu.wannaread.NewReadingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_book"/>
            <EditText
                android:id="@+id/etBookName"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="40dp"
                android:hint="@string/book_name"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_author">
        </ImageView>
        <EditText
            android:id="@+id/etBookAuthor"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:hint="@string/author_name"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="text"
            android:maxLines="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="150dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_interest_level">
        </ImageView>

        <Spinner
            android:layout_marginLeft="11dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:spinnerMode="dropdown"
            android:layout_marginTop="14dp"
            android:entries="@array/interest_levels">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_genre">
        </ImageView>
        <Spinner
            android:layout_marginLeft="11dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:spinnerMode="dropdown"
            android:layout_marginTop="14dp"
            android:entries="@array/book_genres">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="250dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_source">
        </ImageView>
        <EditText
            android:id="@+id/etSourceName"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:hint="@string/source_name"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="text"
            android:maxLines="1"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_add"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</RelativeLayout>
